# SentryGuard

./: .gitignore  LICENSE  README.md  pyproject.toml  项目进度与架构文档.md
sentryguard/: __init__.py  cli.py  detectors.py  license.py  models.py  sanitizer.py  sentry_api.py
tests/: test_detectors.py
