[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentryguard"
version = "0.2.0"
description = "Detect Agentjacking prompt injection attacks in Sentry error events"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["sentry", "security", "agentjacking", "prompt-injection", "ai-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
sentryguard = "sentryguard.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/sentryguard"
"Bug Tracker" = "https://github.com/yourusername/sentryguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentryguard*"]
